[package]
name = "sniph"
version = "0.1.2"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Packet monitoring, filtering and analysis made simple and intuitive"
author = ["Samuel Orji"]
categories = ["network-programming", "command-line-utilities", "concurrency", ]
readme = "README.md"
keywords = ["ip", "network", "packet", "tcpdump", "filter"]


[dependencies]
clap = { version = "4.5.47", features = ["derive"] }
pcap = {version = "2.3.0"}
etherparse = "0.19.0"
chrono = "0.4.42"
crossterm = "0.29.0"
indexmap = "2.11.3"
prettify_ip = "0.1.2"
plotters = "0.3.7"


[dev-dependencies]
tempfile = "3.8"